--- a/categories.html
+++ b/categories.html
@@ -1,214 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Quiz Categories</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>IR-LDCE Homepage</title>
   <style>
-    .categories-main {
-      max-width: 600px;
-      margin: 40px auto;
-      padding: 0 16px;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f5f7fa;
+    }
+
+    /* Header & Navigation */
+    header {
+      background-color: #004080;
+      color: white;
+      padding: 15px 20px;
+      position: relative;
+    }
+
+    nav {
       display: flex;
-      flex-direction: column;
-      gap: 32px;
+      justify-content: space-between;
+      align-items: center;
     }
-    .category-card {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.07);
-      padding: 32px 24px;
-      text-align: center;
-      transition: box-shadow 0.2s;
-      cursor: pointer;
-      font-size: 1.4em;
+
+    .logo {
+      font-size: 1.8rem;
       font-weight: bold;
-      color: #1976d2;
+    }
+
+    ul.menu {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    ul.menu li a {
+      color: white;
       text-decoration: none;
-      display: block;
+      font-weight: 500;
     }
-    .category-card:hover {
-      box-shadow: 0 4px 16px rgba(25,118,210,0.15);
-      background: #f5f7fa;
-      color: #003366;
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
     }
-    /* Header styles */
-    .site-header .navbar-brand img {
-      vertical-align: middle;
+
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px 0;
     }
-    .site-header .navbar-main .navbar-nav .nav-link {
-      font-weight: bold;
-      letter-spacing: 0.5px;
-    }
-    @media (max-width: 991.98px) {
-      .site-header .navbar-main .navbar-nav {
+
+    @media (max-width: 768px) {
+      ul.menu {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background: #004080;
         width: 100%;
+        padding: 10px 0;
       }
-      .site-header .navbar-main .navbar-nav .nav-item {
-        width: 100%;
+
+      ul.menu.active {
+        display: flex;
       }
-      .site-header .navbar-main .navbar-nav .nav-link,
-      .site-header .navbar-main .navbar-nav .btn {
-        width: 100%;
-        text-align: left;
-        margin-left: 0;
+
+      .hamburger {
+        display: flex;
       }
+    }
+
+    /* Main Content */
+    main {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 20px;
+    }
+
+    .content {
+      flex: 3;
+      min-width: 250px;
+      padding: 20px;
+    }
+
+    .sidebar {
+      flex: 1;
+      min-width: 200px;
+      padding: 20px;
+      background-color: #e0ecff;
+      border-left: 20px solid #ccc;
+    }
+
+    .card {
+      background-color: white;
+      margin-bottom: 20px;
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 8px;
+    }
+
+    h2 {
+      color: #004080;
+    }
+
+    /* Footer */
+    footer {
+      background-color: #004080;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
   </style>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- Header START -->
-  <header class="site-header">
-    <!-- Top yellow bar -->
-    <div class="bg-warning py-2">
-      <div class="container-fluid d-flex justify-content-between align-items-center px-3">
-        <!-- Left: Home, Railway Official Website -->
-        <div class="d-flex align-items-center">
-          <a href="index.html" class="text-dark fw-bold me-3"><i class="fas fa-home"></i> Home</a>
-          <a href="https://indianrail.gov.in" target="_blank" class="text-dark fw-bold">Railway Official Website</a>
-        </div>
-        <!-- Right: About Us, Register, Login, Logout -->
-        <div class="d-flex align-items-center">
-          <a href="about.html" class="text-dark fw-bold me-3 d-none d-lg-inline">About Us</a>
-          <a href="register.html" id="registerLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Register</a>
-          <a href="login.html" id="loginLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Login</a>
-          <button id="logoutButton" class="btn btn-outline-dark btn-sm fw-bold d-none d-lg-inline" style="display:none;">Logout</button>
-        </div>
-        <!-- Hamburger for mobile -->
-        <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </div>
 
-    <!-- White navbar under yellow bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-main border-bottom">
-      <div class="container-fluid px-3">
-        <!-- Left: Logo + IR-LDCE -->
-        <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
-          <img src="logo.png" alt="IR-LDCE Logo" style="height:48px;max-width:120px;width:auto;object-fit:contain;" />
-          <span class="ms-2 fw-bold">IR-LDCE</span>
-        </a>
-        <!-- Right: Categories, Daily Dose, Dashboard -->
-        <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
-          <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="categories.html">CATEGORIES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="daily-dose.html">DAILY DOSE</a>
-            </li>
-            <li class="nav-item">
-              <button id="dashboardBtn" type="button" class="btn btn-outline-dark btn-sm ms-lg-2 fw-bold" style="display:none;">
-                <i class="fa fa-user-circle"></i> Dashboard
-              </button>
-            </li>
-            <!-- Mobile only: About Us, Register, Login, Logout -->
-            <li class="nav-item d-lg-none mt-2">
-              <a href="about.html" class="nav-link fw-bold">About Us</a>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a href="register.html" id="registerLinkMobile" class="nav-link fw-bold">Register</a>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a href="login.html" id="loginLinkMobile" class="nav-link fw-bold">Login</a>
-            </li>
-            <li class="nav-item d-lg-none">
-              <button id="logoutButtonMobile" class="btn btn-outline-dark btn-sm fw-bold w-100 mt-1" style="display:none;">Logout</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <!-- Header END -->
+<header>
+  <nav>
+    <div class="logo">IR-LDCE</div>
+   <!-- Firebase SDK (Make sure to include this in your page) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
-  <!-- Firebase Auth logic for header -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+<!-- Firebase Configuration -->
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+    authDomain: "quiz-app-1b48b.firebaseapp.com",
+    projectId: "quiz-app-1b48b",
+    appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
-      authDomain: "quiz-app-1b48b.firebaseapp.com",
-      projectId: "quiz-app-1b48b",
-      storageBucket: "quiz-app-1b48b.appspot.com",
-      messagingSenderId: "765334603137",
-      appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
-    };
+<!-- UI Section -->
+<div class="d-flex align-items-center">
+  <a href="login.html" id="loginLink" class="text-dark fw-bold me-3">Login</a>
+  <button id="logoutButton" class="btn btn-outline-dark btn-sm fw-bold" style="display: none;">Logout</button>
+</div>
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+<!-- Auth State Handling -->
+<script>
+  const auth = firebase.auth();
 
-    function updateHeaderUI(user) {
-      // Desktop
-      const registerLink = document.getElementById('registerLink');
-      const loginLink = document.getElementById('loginLink');
-      const logoutButton = document.getElementById('logoutButton');
-      // Mobile
-      const registerLinkMobile = document.getElementById('registerLinkMobile');
-      const loginLinkMobile = document.getElementById('loginLinkMobile');
-      const logoutButtonMobile = document.getElementById('logoutButtonMobile');
-      // Dashboard button
-      const dashboardBtn = document.getElementById('dashboardBtn');
+  const loginLink = document.getElementById("loginLink");
+  const logoutButton = document.getElementById("logoutButton");
 
-      if (user) {
-        if (registerLink) registerLink.style.display = 'none';
-        if (loginLink) loginLink.style.display = 'none';
-        if (logoutButton) logoutButton.style.display = '';
-        if (registerLinkMobile) registerLinkMobile.style.display = 'none';
-        if (loginLinkMobile) loginLinkMobile.style.display = 'none';
-        if (logoutButtonMobile) logoutButtonMobile.style.display = '';
-        if (dashboardBtn) dashboardBtn.style.display = '';
-      } else {
-        if (registerLink) registerLink.style.display = '';
-        if (loginLink) loginLink.style.display = '';
-        if (logoutButton) logoutButton.style.display = 'none';
-        if (registerLinkMobile) registerLinkMobile.style.display = '';
-        if (loginLinkMobile) loginLinkMobile.style.display = '';
-        if (logoutButtonMobile) logoutButtonMobile.style.display = 'none';
-        if (dashboardBtn) dashboardBtn.style.display = 'none';
-      }
+  // Listen for auth state changes
+  auth.onAuthStateChanged((user) => {
+    if (user) {
+      loginLink.style.display = "none";
+      logoutButton.style.display = "inline-block";
+    } else {
+      loginLink.style.display = "inline";
+      logoutButton.style.display = "none";
     }
+  });
 
-    document.addEventListener('DOMContentLoaded', function() {
-      // Monitor Firebase Auth state
-      onAuthStateChanged(auth, function(user) {
-        updateHeaderUI(user);
-      });
-
-      // Dashboard button
-      const dashboardBtn = document.getElementById('dashboardBtn');
-      if (dashboardBtn) {
-        dashboardBtn.addEventListener('click', function() {
-          window.location.href = 'dashboard.html';
-        });
-      }
-
-      // Logout buttons
-      const logoutButton = document.getElementById('logoutButton');
-      if (logoutButton) {
-        logoutButton.addEventListener('click', function() {
-          signOut(auth).then(function() {
-            window.location.href = 'index.html';
-          });
-        });
-      }
-      const logoutButtonMobile = document.getElementById('logoutButtonMobile');
-      if (logoutButtonMobile) {
-        logoutButtonMobile.addEventListener('click', function() {
-          signOut(auth).then(function() {
-            window.location.href = 'index.html';
-          });
-        });
-      }
-      // Login/Register links: let them go to their respective pages
+  // Handle logout
+  logoutButton.addEventListener("click", () => {
+    auth.signOut().then(() => {
+      console.log("User signed out");
+    }).catch((error) => {
+      console.error("Sign out error", error);
     });
-  </script>
+  });
+</script>
+
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <ul class="menu" id="navMenu">
+      <li><a href="#"> 🏠 Home</a></li>
+      <li><a href="#"> 📐 Arithmetic Aptitude</a></li>
+      <li><a href="#"> 📊 Data Interpretation</a></li>
+      <li><a href="#"> 📄 Verbal Ability</a></li>
+      <li><a href="#"> 🔄 Logical Reasoning</a></li>
+      <li><a href="#"> 🔠 Verbal Reasoning</a></li>
+      <li><a href="#"> 📘 Nonverbal Reasoning</a></li>
+      <li><a href="#"> ⏰ Online Tests</a></li>
+      <li><a href="#"> 🌐 Current Affairs</a></li>
+      <li><a href="#"> 💡 General Knowledge</a></li>
+    </ul>
+  </nav>
+</header>
 
   <div class="categories-main">
     <a href="manual-quizzes.html" class="category-card">Manual Based Quiz</a>
