--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -180,7 +180,7 @@
       <div></div>
     </div>
     <ul class="menu" id="navMenu">
-      <li><a href="#"> 🏠 Home</a></li>
+      <li><a href="index.html"> 🏠 Home</a></li>
       <li><a href="#"> 📐 Arithmetic Aptitude</a></li>
       <li><a href="#"> 📊 Data Interpretation</a></li>
       <li><a href="#"> 📄 Verbal Ability</a></li>
