--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -181,7 +181,7 @@
     </div>
     <ul class="menu" id="navMenu">
       <li><a href="index.html"> 🏠 Home</a></li>
-      <li><a href="#"> 📐 Arithmetic Aptitude</a></li>
+      <li><a href="index.html"> 📐 Arithmetic Aptitude</a></li>
       <li><a href="#"> 📊 Data Interpretation</a></li>
       <li><a href="#"> 📄 Verbal Ability</a></li>
       <li><a href="#"> 🔄 Logical Reasoning</a></li>
