--- a/dashboard.html
+++ b/dashboard.html
@@ -243,5 +243,14 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="dashboard.js"></script>
+  <footer>
+  &copy; 2025 IR-LDCE. All Rights Reserved.
+</footer>
+
+<script>
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('active');
+  }
+</script>
 </body>
 </html>
