--- a/categories.html
+++ b/categories.html
@@ -201,5 +201,14 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <footer>
+  &copy; 2025 IR-LDCE. All Rights Reserved.
+</footer>
+
+<script>
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('active');
+  }
+</script>
 </body>
 </html>
