--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -217,5 +217,14 @@
       });
     });
   </script>
+  <footer>
+  &copy; 2025 IR-LDCE. All Rights Reserved.
+</footer>
+
+<script>
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('active');
+  }
+</script>
 </body>
 </html>
