--- a/categories.html
+++ b/categories.html
@@ -180,16 +180,12 @@
       <div></div>
     </div>
     <ul class="menu" id="navMenu">
-      <li><a href="#"> 🏠 Home</a></li>
-      <li><a href="#"> 📐 Arithmetic Aptitude</a></li>
-      <li><a href="#"> 📊 Data Interpretation</a></li>
-      <li><a href="#"> 📄 Verbal Ability</a></li>
-      <li><a href="#"> 🔄 Logical Reasoning</a></li>
-      <li><a href="#"> 🔠 Verbal Reasoning</a></li>
-      <li><a href="#"> 📘 Nonverbal Reasoning</a></li>
-      <li><a href="#"> ⏰ Online Tests</a></li>
-      <li><a href="#"> 🌐 Current Affairs</a></li>
-      <li><a href="#"> 💡 General Knowledge</a></li>
+      <li><a href="index.html"> 🏠 Home</a></li>
+      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
+      <li><a href="pyq-quizzes.html"> 📄 PYQ Based MCQ</a></li>
+      <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
+      <li><a href="gk.html"> 💡 General Knowledge</a></li>
     </ul>
   </nav>
 </header>
