--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -181,20 +181,14 @@
     </div>
     <ul class="menu" id="navMenu">
       <li><a href="index.html"> 🏠 Home</a></li>
-      <li><a href="index.html"> 📐 Arithmetic Aptitude</a></li>
-      <li><a href="#"> 📊 Data Interpretation</a></li>
-      <li><a href="#"> 📄 Verbal Ability</a></li>
-      <li><a href="#"> 🔄 Logical Reasoning</a></li>
-      <li><a href="#"> 🔠 Verbal Reasoning</a></li>
-      <li><a href="#"> 📘 Nonverbal Reasoning</a></li>
-      <li><a href="#"> ⏰ Online Tests</a></li>
-      <li><a href="#"> 🌐 Current Affairs</a></li>
-      <li><a href="#"> 💡 General Knowledge</a></li>
+      <li><a href="categories.html"> 📐 MCQ Categories</a></li>
+      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
+      <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
+      <li><a href="gk.html"> 💡 General Knowledge</a></li>
     </ul>
   </nav>
 </header>
-<body>
-  <div id="include-header"></div>
   <div class="quiz-category-main">
     <h2 style="text-align:center; margin-top:32px; color:#1976d2;">PYQ Based Quizzes</h2>
     <div class="dashboard-section">
