--- a/categories.html
+++ b/categories.html
@@ -141,10 +141,30 @@
 </script>
 
 <!-- UI Section -->
+<style>
+  .btn-white-black {
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    font-weight: bold;
+    border-radius: 6px;
+    padding: 6px 12px;
+    transition: background-color 0.3s, color 0.3s;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .btn-white-black:hover {
+    background-color: #f0f0f0;
+    color: #000;
+  }
+</style>
+
 <div class="d-flex align-items-center">
-  <a href="login.html" id="loginLink" class="text-dark fw-bold me-3">Login</a>
-  <button id="logoutButton" class="btn btn-outline-dark btn-sm fw-bold" style="display: none;">Logout</button>
+  <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
+  <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
 </div>
+
 
 <!-- Auth State Handling -->
 <script>
