--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -202,14 +202,13 @@
     <ul class="menu" id="navMenu">
       <li><a href="index.html"> 🏠 Home</a></li>
       <li><a href="categories.html"> 📐 MCQ Categories</a></li>
-      <li><a href="pyq-quizzes.html"> 📄 PYQ Based MCQ</a></li>
+      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
       <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
       <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
       <li><a href="gk.html"> 💡 General Knowledge</a></li>
     </ul>
   </nav>
 </header>
-<body>
   <div class="quiz-category-main">
     <h2 style="text-align:center; margin-top:32px; color:#1976d2;">Manual Based Quizzes</h2>
     <div class="dashboard-section">
