--- a/index.html
+++ b/index.html
@@ -139,6 +139,34 @@
   };
   firebase.initializeApp(firebaseConfig);
 </script>
+    <script>
+  firebase.auth().onAuthStateChanged(function(user) {
+    const loginLink = document.getElementById("loginLink");
+    const logoutButton = document.getElementById("logoutButton");
+    const dashboardButton = document.getElementById("dashboardButton");
+
+    if (user) {
+      // User is logged in
+      loginLink.style.display = "none";
+      logoutButton.style.display = "inline-block";
+      dashboardButton.style.display = "inline-block";
+    } else {
+      // User is not logged in
+      loginLink.style.display = "inline-block";
+      logoutButton.style.display = "none";
+      dashboardButton.style.display = "none";
+    }
+  });
+
+  // Logout logic
+  document.getElementById("logoutButton").addEventListener("click", function () {
+    firebase.auth().signOut().then(() => {
+      console.log("User signed out");
+    }).catch((error) => {
+      console.error("Logout error:", error);
+    });
+  });
+</script>
 <script>
   function showToast(message, isError = false) {
     const toast = document.getElementById("toast");
@@ -210,6 +238,7 @@
 
 <div class="d-flex align-items-center">
   <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
+  <a href="dashboard.html" id="dashboardButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Dashboard</a>
   <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
 </div>
 
