--- a/index.html
+++ b/index.html
@@ -149,44 +149,20 @@
       <p>IR-LDCE provides hundreds of Manual Based questions, technical questions, and online test practice material for exams like LDCE-AEN and placement interviews.</p>
     </div>
 
-    <h2 class="mb-4 text-center text-primary" style="font-size: 2rem;">Available Quizzes</h2>
-    <div class="container">
-      <div class="row g-3">
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="irwm">1. Indian Railway Works Manual</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="irpwm">2. Indian Railway P-way Manual</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="irec">4. Indian Railway Engineering Code</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="stm">5. Small Track Machine Manual</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="usfd">6. USFD Manual</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="fbwm">7. FBW Manual</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.3rem;" data-manual="store">8. Store Manual</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-primary w-100 manual-btn" style="font-size: 1.5rem;" data-manual="account">9. Account Manual</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-success w-100 manual-btn" style="font-size: 1.3rem;" data-manual="pyq2022">10. PYQ 30% Main 2022</button>
-        </div>
-        <div class="col-12 col-md-4">
-          <button class="btn btn-outline-success w-100 manual-btn" style="font-size: 1.3rem;" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
-        </div>
-      </div>
-    </div>
+<h2 class="mb-4 text-center text-primary" style="font-size: 2rem;">Available Quizzes</h2>
+<div class="quiz-list">
+  <div class="quiz-card">1. Indian Railway Works Manual</div>
+  <div class="quiz-card">2. Indian Railway P-way Manual</div>
+  <div class="quiz-card">3. Indian Railway Schedule of Dimensions</div>
+  <div class="quiz-card">4. Indian Railway Engineering Code</div>
+  <div class="quiz-card">5. Small Track Machine Manual</div>
+  <div class="quiz-card">6. USFD Manual</div>
+  <div class="quiz-card">7. FBW Manual</div>
+  <div class="quiz-card">8. Store Manual</div>
+  <div class="quiz-card">9. Account Manual</div>
+  <div class="quiz-card">10. PYQ 30% Main 2022</div>
+  <div class="quiz-card">11. PYQ 30% Main 2021</div>
+</div>
 
     <div class="card">
       <h3>Latest Questions</h3>
