--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       background-color: #f5f7fa;
     }
 
+    /* Header & Navigation */
     header {
       background-color: #004080;
       color: white;
@@ -22,7 +23,6 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
     }
 
     .logo {
@@ -42,25 +42,6 @@
       color: white;
       text-decoration: none;
       font-weight: 500;
-    }
-
-    .auth-buttons {
-      display: flex;
-      gap: 10px;
-    }
-
-    .auth-buttons button {
-      background: white;
-      color: #004080;
-      border: none;
-      padding: 6px 12px;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .auth-buttons button:hover {
-      background-color: #ddd;
     }
 
     .hamburger {
@@ -97,6 +78,7 @@
       }
     }
 
+    /* Main Content */
     main {
       display: flex;
       flex-wrap: wrap;
@@ -129,42 +111,12 @@
       color: #004080;
     }
 
+    /* Footer */
     footer {
       background-color: #004080;
       color: white;
       text-align: center;
       padding: 20px;
-    }
-
-    .quiz-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-      margin-top: 20px;
-      margin-bottom: 40px;
-    }
-
-    .quiz-card {
-      background-color: #1976d2;
-      color: white;
-      font-weight: bold;
-      padding: 15px 20px;
-      border-radius: 8px;
-      text-align: center;
-      min-width: 240px;
-      flex: 1 1 240px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-      cursor: pointer;
-    }
-
-    .quiz-card:hover {
-      background-color: #125ca4;
-    }
-
-    /* Hide buttons by default to prevent flicker */
-    #login-btn, #dashboard-btn, #logout-btn {
-      display: none;
     }
   </style>
 </head>
@@ -173,25 +125,88 @@
 <header>
   <nav>
     <div class="logo">IR-LDCE</div>
-    <ul class="menu" id="navMenu">
-      <li><a href="index.html"> 🏠 Home</a></li>
-      <li><a href="categories.html"> 📐 MCQ Categories</a></li>
-      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
-      <li><a href="pyq-quizzes.html"> 📄 PYQ Based MCQ</a></li>
-      <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
-      <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
-      <li><a href="gk.html"> 💡 General Knowledge</a></li>
-    </ul>
-    <div class="auth-buttons">
-      <button id="login-btn" onclick="window.location.href='login.html'">Login</button>
-      <button id="dashboard-btn" onclick="window.location.href='dashboard.html'">Dashboard</button>
-      <button id="logout-btn">Logout</button>
-    </div>
+   <!-- Firebase SDK (Make sure to include this in your page) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
+<!-- Firebase Configuration -->
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+    authDomain: "quiz-app-1b48b.firebaseapp.com",
+    projectId: "quiz-app-1b48b",
+    appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+  };
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+<!-- UI Section -->
+<style>
+  .btn-white-black {
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    font-weight: bold;
+    border-radius: 6px;
+    padding: 6px 12px;
+    transition: background-color 0.3s, color 0.3s;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .btn-white-black:hover {
+    background-color: #f0f0f0;
+    color: #000;
+  }
+</style>
+
+<div class="d-flex align-items-center">
+  <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
+  <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
+</div>
+
+
+<!-- Auth State Handling -->
+<script>
+  const auth = firebase.auth();
+
+  const loginLink = document.getElementById("loginLink");
+  const logoutButton = document.getElementById("logoutButton");
+
+  // Listen for auth state changes
+  auth.onAuthStateChanged((user) => {
+    if (user) {
+      loginLink.style.display = "none";
+      logoutButton.style.display = "inline-block";
+    } else {
+      loginLink.style.display = "inline";
+      logoutButton.style.display = "none";
+    }
+  });
+
+  // Handle logout
+  logoutButton.addEventListener("click", () => {
+    auth.signOut().then(() => {
+      console.log("User signed out");
+    }).catch((error) => {
+      console.error("Sign out error", error);
+    });
+  });
+</script>
+
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
       <div></div>
     </div>
+    <ul class="menu" id="navMenu">
+      <li><a href="index.html"> 🏠 Home</a></li>
+      <li><a href="categories.html"> 📐 MCQ Categories</a></li>
+      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
+      <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
+      <li><a href="gk.html"> 💡 General Knowledge</a></li>
+    </ul>
   </nav>
 </header>
 
