--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -202,7 +202,7 @@
     <ul class="menu" id="navMenu">
       <li><a href="index.html"> 🏠 Home</a></li>
       <li><a href="categories.html"> 📐 MCQ Categories</a></li>
-      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
+      <li><a href="pyq-quizzes.html"> 📊 PYQ Based MCQ</a></li>
       <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
       <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
       <li><a href="gk.html"> 💡 General Knowledge</a></li>
