--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -222,7 +222,7 @@
     </div>
   </div>
 
-
+     <script>
     // Quiz button handlers
     document.addEventListener('DOMContentLoaded', () => {
       document.querySelectorAll('.manual-btn').forEach(btn => {
