--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -118,6 +118,32 @@
       text-align: center;
       padding: 20px;
     }
+        /* New Quiz Section Styles */
+    .quiz-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+      margin-top: 20px;
+      margin-bottom: 40px;
+    }
+
+    .quiz-card {
+      background-color: #1976d2;
+      color: white;
+      font-weight: bold;
+      padding: 15px 20px;
+      border-radius: 8px;
+      text-align: center;
+      min-width: 240px;
+      flex: 1 1 240px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      cursor: pointer;
+    }
+
+    .quiz-card:hover {
+      background-color: #125ca4;
+    }
   </style>
 </head>
 <body>
