--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -128,7 +128,7 @@
       margin-bottom: 40px;
     }
 
-    .quiz-card {
+    .manual-btn {
       background-color: #1976d2;
       color: white;
       font-weight: bold;
@@ -141,7 +141,7 @@
       cursor: pointer;
     }
 
-    .quiz-card:hover {
+    .manual-btn:hover {
       background-color: #125ca4;
     }
   </style>
