--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -250,7 +250,7 @@
       </div>
     </div>
   </div>
-
+<script>
     // Quiz button handlers
     document.addEventListener('DOMContentLoaded', () => {
       document.querySelectorAll('.manual-btn').forEach(btn => {
