--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IR-LDCE Homepage</title>
+  <title>IR-LDCE PYQ Based</title>
   <style>
     body {
       font-family: Arial, sans-serif;
