--- a/categories.html
+++ b/categories.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IR-LDCE Homepage</title>
+  <title>IR-LDCE Categories</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -118,6 +118,35 @@
       text-align: center;
       padding: 20px;
     }
+    .categories-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 48px;
+  gap: 24px;
+}
+
+.category-card {
+  background-color: #1976d2;
+  color: white;
+  font-weight: bold;
+  padding: 24px 32px;
+  border-radius: 12px;
+  text-align: center;
+  min-width: 320px;
+  font-size: 1.25rem;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+  text-decoration: none;
+  transition: background 0.2s, box-shadow 0.2s;
+  margin-bottom: 0;
+  display: block;
+}
+
+.category-card:hover {
+  background-color: #125ca4;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+}
+
   </style>
 </head>
 <body>
@@ -210,10 +239,11 @@
   </nav>
 </header>
 
-  <div class="categories-main">
-    <a href="manual-quizzes.html" class="category-card">Manual Based Quiz</a>
-    <a href="pyq-quizzes.html" class="category-card">PYQ Based Quiz</a>
-  </div>
+<div class="categories-main">
+  <a href="manual-quizzes.html" class="category-card">Manual Based Quiz</a>
+  <a href="pyq-quizzes.html" class="category-card">PYQ Based Quiz</a>
+</div>
+
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
