--- a/dashboard.html
+++ b/dashboard.html
@@ -150,6 +150,38 @@
   background-color: #125ca4;
   box-shadow: 0 4px 16px rgba(0,0,0,0.18);
 }
+    .profile-section.flex-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* Align to the left */
+  gap: 2rem;
+  margin-bottom: 2rem;
+  padding: 0 20px; /* Optional: add some padding if needed */
+}
+.history-btn {
+  background-color: #1976d2;
+  color: white;
+  font-weight: bold;
+  padding: 18px 20px;
+  border-radius: 12px;
+  text-align: center;
+  min-width: 180px; /* Adjust as needed */
+  box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+  cursor: pointer;
+  border: none;
+  font-size: 1.15rem;
+  transition: background 0.2s, box-shadow 0.2s;
+  text-decoration: none;
+  display: inline-block;
+}
+.history-btn:hover {
+  background-color: #125ca4;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+}
+.avatar-container.text-center {
+  text-align: center;
+}
+
 
   </style>
 </head>
@@ -248,15 +280,18 @@
     <div id="error-message" class="alert alert-danger text-center d-none">
       You are not logged in. <a href="login.html">Go to login</a>
     </div>
-    <section class="profile-section text-center mb-4">
-      <div class="avatar-container mb-2">
-        <img id="userAvatar" src="default-avatar.png" alt="Profile Picture" class="rounded-circle" width="100" height="100" />
-      </div>
-      <div class="profile-info">
-        <h2>Welcome, <span id="dashboard-username">User</span>!</h2>
-        <p>Email: <span id="account-email">user@example.com</span></p>
-      </div>
-    </section>
+    <section class="profile-section flex-container">
+  <a href="quiz-history.html" class="manual-btn history-btn">Quiz History</a>
+  <div class="avatar-container text-center">
+    <div class="mb-2">
+      <img id="userAvatar" src="default-avatar.png" alt="Profile Picture" class="rounded-circle" width="100" height="100" />
+    </div>
+    <div class="profile-info">
+      <h2>Welcome, <span id="dashboard-username">User</span>!</h2>
+      <p>Email: <span id="account-email">user@example.com</span></p>
+    </div>
+  </div>
+</section>
     <section class="dashboard-section" id="quiz-section">
       <h3 class="mb-3 text-center">Available Quizzes</h3>
       <div class="quiz-list d-grid gap-2">
