--- a/dashboard.html
+++ b/dashboard.html
@@ -294,8 +294,10 @@
 </section>
 
     <section class="dashboard-section" id="quiz-section">
-      <h3 class="mb-3 text-center">Available Quizzes</h3>
-      <div class="quiz-list d-grid gap-2">
+      <div style="text-align: center;">
+    <h3 class="mb-3">Available Quizzes</h3>
+  </div>
+  <div class="quiz-list d-grid gap-2">
         <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
         <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
         <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
