--- a/dashboard.html
+++ b/dashboard.html
@@ -294,9 +294,9 @@
 </section>
 
     <section class="dashboard-section" id="quiz-section">
-      <div style="text-align: center;">
-    <h3 class="mb-3">Available Quizzes</h3>
-  </div>
+     <div style="text-align: center;">
+  <h3 class="mb-3" style="font-size: 2rem;">Available Quizzes</h3>
+</div>
   <div class="quiz-list d-grid gap-2">
         <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
         <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
