--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -238,7 +238,9 @@
   <div class="quiz-category-main">
     <h2 style="text-align:center; margin-top:32px; color:#1976d2;">Manual Based Quizzes</h2>
     <div class="dashboard-section">
-      <h3>MCQ Based</h3>
+      <div style="text-align: left;">
+  <h3 class="mb-3" style="font-size: 2rem;">Manual Based</h3>
+</div>
       <div class="quiz-list" id="mcqList">
         <button class="manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
         <button class="manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
