--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -236,9 +236,11 @@
   </nav>
 </header>
   <div class="quiz-category-main">
-    <h2 style="text-align:center; margin-top:32px; color:#1976d2;">PYQ Based Quizzes</h2>
+    <h2 style="text-align:center; margin-top:32px; color:#1976d2;">PYQ Based MCQ</h2>
     <div class="dashboard-section">
-      <h3>PYQ Based</h3>
+      <div style="text-align: center;">
+  <h3 class="mb-3" style="font-size: 2rem;">Available PYQ Based</h3>
+</div>
       <div class="quiz-list" id="pyqList">
         <button class="manual-btn" data-manual="stm" aria-label="Start quiz for Small Track Machine Manual">5. Small Track Machine Manual</button>
         <button class="manual-btn" data-manual="usfd" aria-label="Start quiz for USFD Manual">6. USFD Manual</button>
