--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -236,10 +236,10 @@
   </nav>
 </header>
   <div class="quiz-category-main">
-    <h2 style="text-align:center; margin-top:32px; color:#1976d2;">Manual Based Quizzes</h2>
+    <h2 style="text-align:center; margin-top:32px; color:#1976d2;">Manual Based MCQ</h2>
     <div class="dashboard-section">
-      <div style="text-align: left;">
-  <h3 class="mb-3" style="font-size: 2rem;">Manual Based</h3>
+      <div style="text-align: centre;">
+  <h3 class="mb-3" style="font-size: 2rem;">Available Manual Based</h3>
 </div>
       <div class="quiz-list" id="mcqList">
         <button class="manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
