--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <p>IR-LDCE provides hundreds of Manual Based questions, technical questions, and online test practice material for exams like LDCE-AEN and placement interviews.</p>
     </div>
 
-    <h2 style="text-align: center;">Available Quizzes</h2>
+    <h2 style="text-align: center;">Available MCQ</h2>
     <div class="quiz-list">
       <div class="quiz-card">1. Indian Railway Works Manual</div>
       <div class="quiz-card">2. Indian Railway P-way Manual</div>
@@ -270,9 +270,9 @@
     <div class="card">
       <h3>Latest Questions</h3>
       <ul>
-        <li>Aptitude: Boats and Streams - Q23</li>
-        <li>Logical Reasoning: Number Series - Q12</li>
-        <li>Verbal: Sentence Correction - Q6</li>
+        <li>Under Development</li>
+        <li>Under Development</li>
+        <li>Under Development</li>
       </ul>
     </div>
   </div>
