--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IR-LDCE Manual Based</title>
+  <title>IR-LDCE Homepage</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -118,7 +118,7 @@
       text-align: center;
       padding: 20px;
     }
-        /* New Quiz Section Styles */
+    /* New Quiz Section Styles */
     .quiz-list {
       display: flex;
       flex-wrap: wrap;
@@ -128,7 +128,7 @@
       margin-bottom: 40px;
     }
 
-    .manual-btn {
+    .quiz-card {
       background-color: #1976d2;
       color: white;
       font-weight: bold;
@@ -141,7 +141,7 @@
       cursor: pointer;
     }
 
-    .manual-btn:hover {
+    .quiz-card:hover {
       background-color: #125ca4;
     }
   </style>
@@ -188,8 +188,10 @@
 
 <div class="d-flex align-items-center">
   <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
-  <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
+  <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
+  <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
 </div>
+
 
 
 <!-- Auth State Handling -->
@@ -198,15 +200,21 @@
 
   const loginLink = document.getElementById("loginLink");
   const logoutButton = document.getElementById("logoutButton");
+  const dashboardLink = document.getElementById("dashboardLink");
+  const mobileDashboardLink = document.getElementById("mobileDashboardLink");
 
   // Listen for auth state changes
   auth.onAuthStateChanged((user) => {
     if (user) {
       loginLink.style.display = "none";
       logoutButton.style.display = "inline-block";
+      dashboardLink.style.display = "inline-block";
+      mobileDashboardLink.style.display = "inline";
     } else {
       loginLink.style.display = "inline";
       logoutButton.style.display = "none";
+      dashboardLink.style.display = "none";
+      mobileDashboardLink.style.display = "none";
     }
   });
 
@@ -228,10 +236,12 @@
     <ul class="menu" id="navMenu">
       <li><a href="index.html"> 🏠 Home</a></li>
       <li><a href="categories.html"> 📐 MCQ Categories</a></li>
-      <li><a href="pyq-quizzes.html"> 📊 PYQ Based MCQ</a></li>
+      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
+      <li><a href="pyq-quizzes.html"> 📄 PYQ Based MCQ</a></li>
       <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
       <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
       <li><a href="gk.html"> 💡 General Knowledge</a></li>
+      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
     </ul>
   </nav>
 </header>
