--- a/login.html
+++ b/login.html
@@ -170,7 +170,7 @@
       errorDiv.style.display = "none";
       try {
         await signInWithEmailAndPassword(auth, email, password);
-        window.location.href = "dashboard.html";
+        window.location.href = "index.html";
       } catch (error) {
         errorDiv.textContent = error.message.replace("Firebase:", "");
         errorDiv.style.display = "block";
@@ -199,7 +199,7 @@
             createdAt: serverTimestamp(),
           });
         }
-        window.location.href = "dashboard.html";
+        window.location.href = "index.html";
       } catch (error) {
         errorDiv.textContent = error.message.replace("Firebase:", "");
         errorDiv.style.display = "block";
