--- a/categories.html
+++ b/categories.html
@@ -191,8 +191,9 @@
 
 <div class="d-flex align-items-center">
   <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
-  <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
-</div>
+   <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
+  <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
+  </div>
 
 
 <!-- Auth State Handling -->
@@ -201,15 +202,20 @@
 
   const loginLink = document.getElementById("loginLink");
   const logoutButton = document.getElementById("logoutButton");
-
+    const dashboardLink = document.getElementById("dashboardLink");
+  const mobileDashboardLink = document.getElementById("mobileDashboardLink");
   // Listen for auth state changes
   auth.onAuthStateChanged((user) => {
     if (user) {
       loginLink.style.display = "none";
       logoutButton.style.display = "inline-block";
-    } else {
+      dashboardLink.style.display = "inline-block";
+      mobileDashboardLink.style.display = "inline";
+          } else {
       loginLink.style.display = "inline";
       logoutButton.style.display = "none";
+      dashboardLink.style.display = "none";
+      mobileDashboardLink.style.display = "none";
     }
   });
 
@@ -235,6 +241,7 @@
       <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
       <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
       <li><a href="gk.html"> 💡 General Knowledge</a></li>
+      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
     </ul>
   </nav>
 </header>
